Bug 141671 - FILESAVE: RTF: Incorrect font properties after RT in Word
Summary: FILESAVE: RTF: Incorrect font properties after RT in Word
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.3
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2021-04-13 08:49 UTC by Xisco Faulí
Modified: 2025-07-26 19:42 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (99.32 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2021-04-13 08:49 UTC, Xisco Faulí
Details
RTF generated after the mentioned commit (20.02 KB, application/rtf)
2021-04-13 08:53 UTC, Xisco Faulí
Details
RTF generated before the mentioned commit (20.02 KB, application/rtf)
2021-04-13 08:53 UTC, Xisco Faulí
Details
How it looks in MSO Word 2010 (70.86 KB, image/png)
2021-04-13 08:54 UTC, Xisco Faulí
Details
The original file and the roundtripped RTF in Word 2013 (202.05 KB, image/png)
2022-01-31 13:16 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2021-04-13 08:49:50 UTC
Created attachment 171148 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Save it to RTF
3. Open the generated document in MSO Word ( In my case I'm using Word 2010 )

-> The first paragraph uses the Courier font instead of Cambria

Reproduced in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 4eac7a11e5d39ca6c783f65f1ca2df009b9a37e4
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2021-04-13 08:50:44 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=f97af19460fbd7483a0e1c1d0137e814f5390e69

author	Mark Hung <marklh9@gmail.com>	2020-11-22 19:32:32 +0800
committer	Miklos Vajna <vmiklos@collabora.com>	2020-11-25 09:20:27 +0100
commit f97af19460fbd7483a0e1c1d0137e814f5390e69 (patch)
tree 91f385b115c57e564bf40b409fc139016ff26159
parent 2c9f4c6a5e1a9ce5ef501c8f5a7f5cd421bf86f7 (diff)
tdf#137894 separate associated character properties

Bisected with: bibisect-linux64-7.2

Adding Cc: to Mark Hung
Comment 2 Xisco Faulí 2021-04-13 08:53:24 UTC
Created attachment 171149 [details]
RTF generated after the mentioned commit
Comment 3 Xisco Faulí 2021-04-13 08:53:43 UTC
Created attachment 171150 [details]
RTF generated before the mentioned commit
Comment 4 Xisco Faulí 2021-04-13 08:54:35 UTC
Created attachment 171151 [details]
How it looks in MSO Word 2010
Comment 5 Gabor Kelemen (Collabora) 2022-01-31 13:16:08 UTC
Created attachment 177936 [details]
The original file and the roundtripped RTF in Word 2013

Still a problem in

Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: eb69767d7c1bb8e6e780fd9503f08c9d7f5ecb45
CPU threads: 13; OS: Windows 10.0 Build 19042; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Looks like there is an extra DF font setting that was not there in the original.
Comment 6 Justin L 2022-02-24 08:10:00 UTC
Unfortunately, Mark is not that active at the moment, so someone else should look into this more closely.
Comment 7 Commit Notification 2022-03-24 13:05:11 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/882045b934a3416cc48da2c4e30648892a419577

tdf#141671 fix destroyed pargraph style in exported RTF in MSO.

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2022-03-28 18:55:16 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/0c1894acda828c02c76c97c25149187cb04ae91f

tdf#141671 fix destroyed pargraph style in exported RTF in MSO.

It will be available in 7.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Justin L 2022-04-01 10:11:56 UTC
Marking as fixed since I don't see any more backports queued up.
Comment 10 Mike Kaganski 2025-07-18 12:43:36 UTC
(In reply to Xisco Faulí from comment #3)
> Created attachment 171150 [details]
> RTF generated before the mentioned commit

It was the same file, unfortunately :-(
Comment 11 Mike Kaganski 2025-07-18 12:52:38 UTC
Hmm, but that didn't fix it - the output is differently wrong now.