tdf#141671 fix destroyed pargraph style in exported RTF in MSO.

Do not call MoveCharacterProperties() in RtfAttributeOutput
::EndParagraphProperties(). RtfAttributeOutput::ParagraphStyle() has
emited run associated properties defined in paragraph style.
Calling MoveCharacterProperties() again overwrites them.

As this bug is only visible in MS Word, no unit test case is
added.

Change-Id: I6e5bfd12e8afa7dc286ca54448c1ff022aade31d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/131848
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>
(cherry picked from commit 882045b934a3416cc48da2c4e30648892a419577)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/132175
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>